--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ to{opacity:1; transform:translateY(0);}
 <body>
 
 <header>
-<div class="logo">Saurav<span>XR</span> Studio</div>
+<img src="ChatGPT Image Feb 23, 2026, 12_25_19 PM" alt="SauravXR Logo">
 <div class="tagline">Premium Quality. Affordable Excellence.</div>
 
 <a href="tel:+917785890885" class="btn">Call Now</a>
@@ -234,3 +234,4 @@ to{opacity:1; transform:translateY(0);}
 
 </body>
 </html>
+
