--- a/index.html
+++ b/index.html
@@ -30,19 +30,15 @@ padding:120px 20px;
 background:linear-gradient(135deg,#1e3a8a,#9333ea);
 }
 
-.logo{
-font-size:55px;
-font-weight:bold;
-letter-spacing:2px;
+header img{
+max-width:350px;
+width:100%;
+margin-bottom:20px;
 animation:fadeDown 1.2s ease;
 }
 
-.logo span{
-color:#38bdf8;
-}
-
 .tagline{
-margin-top:15px;
+margin-top:10px;
 font-size:20px;
 opacity:0.9;
 }
@@ -161,7 +157,6 @@ to{opacity:1; transform:translateY(0);}
 }
 
 @media(max-width:768px){
-.logo{font-size:40px;}
 .services{flex-direction:column; align-items:center;}
 .gallery img{width:90%;}
 }
@@ -171,7 +166,7 @@ to{opacity:1; transform:translateY(0);}
 <body>
 
 <header>
-<img src="logo.png" alt="SauravXR Logo" width="300">
+<img src="logo.png" alt="SauravXR Studio Logo">
 <div class="tagline">Premium Quality. Affordable Excellence.</div>
 
 <a href="tel:+917785890885" class="btn">Call Now</a>
@@ -234,5 +229,3 @@ to{opacity:1; transform:translateY(0);}
 
 </body>
 </html>
-
-
