--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ to{opacity:1; transform:translateY(0);}
 <body>
 
 <header>
-<img src="logo.png" alt="SauravXR Studio Logo">
+<img src="logo.png.png" alt="SauravXR Studio Logo" width="300">
 <div class="tagline">Premium Quality. Affordable Excellence.</div>
 
 <a href="tel:+917785890885" class="btn">Call Now</a>
@@ -229,3 +229,4 @@ to{opacity:1; transform:translateY(0);}
 
 </body>
 </html>
+
